# BlazeTelegram

./: Dockerfile  README.md  efs_bot.session  main.py  pyproject.toml  requirements.txt
blazetelegrambot/dispatchers/: MemoryDispatcher.py
blazetelegrambot/domain/entitys/: bet.py  chat_user.py  double.py  message.py  roulette.py  server_double.py
blazetelegrambot/domain/factory/: double_factory.py  event_factory.py  strategy_factory.py
blazetelegrambot/handlers/: double_msg_sender.py  double_signal_sender.py  log_handler.py  roulette_updated.py
blazetelegrambot/infrastructure/: httpx_client.py  telethon_message_client.py
blazetelegrambot/infrastructure/checkers/: win_checker.py
blazetelegrambot/infrastructure/signal_strategys/: color_and_roll_strategy.py  color_strategy.py  roll_strategy.py
blazetelegrambot/interfaces/: api_handler.py  base_event.py  bet_factory.py  checker.py  dispatcher.py  handler.py  http.py  message_client.py  presenter.py  service.py  signal_strategy.py  strategy_factory.py
blazetelegrambot/presenters/: roulette_updater.py
blazetelegrambot/presenters/api/: api_presenter.py  (+1 more)
blazetelegrambot/services/: add_double.py  config.py  create_strategy.py  create_telegram_message_client.py  roulette_checker.py  telegram_config.py  transform_bet_to_msg.py  transform_bet_to_msg_result.py  transform_bet_to_msg_signal.py
tests/: test_cheker.py  test_create_strategy_service.py  test_double_entity.py  test_double_signal_sender.py  test_event_factory.py  test_memory_dispatcher.py  test_roulette.py  test_roulette_checker.py  test_strategy.py
(+7 files in other folders)
